# rust-tetris-game

./: .gitignore  CODEOWNERS  Cargo.toml  README.md
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: rust.yml
docs/: baseline.md  collision.md  config.md  extra_credit.md  hard_drop.md  hold.md  rng.md  score.md
implementation/: 01-baseline-pr-guide.md  01-baseline.md  02-config-pr-guide.md  02-config.md  03-collision-pr-guide.md  03-collision.md  04-score-pr-guide.md  04-score.md  05-rng-pr-guide.md  05-rng.md  06-hard-drop-pr-guide.md  06-hard-drop.md  07-hold-pr-guide.md  07-hold.md  08-how-tests-work.md  baseline-copy-paste-cheatsheet.md  collision-copy-paste-cheatsheet.md  config-copy-paste-cheatsheet.md  design-checkpoint-note.md  hard-drop-copy-paste-cheatsheet.md  hold-copy-paste-cheatsheet.md  index.md  minimum-required-non-todo-changes.md  one-page-submission-note.md  rng-copy-paste-cheatsheet.md  score-copy-paste-cheatsheet.md  viva-short-note.md
src/: bag.rs  board.rs  collision.rs  config.rs  data.rs  hard_drop.rs  hold.rs  lib.rs  mock_collision.rs  rr.rs  score.rs  ui.rs
src/rr/: record.rs  replay.rs  test_replay.rs
test_data/: config-0.json  config-67.json  config-727.json  config-deterministic.json  hard-drop-67.json  hard-drop-727.json  hard-drop-deterministic.json  hard-drop-deterministic2.json  hard-drop-deterministic3.json  hard-drop-hold-0.json  level-up.json  score-deterministic.json  score-deterministic2.json  score-deterministic3.json  score-deterministic4.json
tests/end_to_end/: baseline.rs  collision.rs  common.rs  (+6 more)
