[package]
name = "blox"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
"2d",
"dev",
"experimental_bevy_ui_widgets",
"dynamic_linking",
] }
clap = { version = "4.5.60", features = ["derive"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
libtest-mimic-collect = "0.3.3"
image = { version = "0.25.9", default-features = false, features = ["png"] }
tempfile = "3.25.0"

[features]
config = []
collision = ["config"]
score = ["collision"]
rng = ["config"]
hard_drop = ["collision"]
hold = ["collision"]
extra_credit = ["hold", "hard_drop", "score", "rng"]
default = ["dev"]
dev = ["common", "bevy/dynamic_linking"]
test = ["dev", "bevy/bevy_ci_testing"]
ci = ["common", "bevy/bevy_ci_testing"]
common = ["enabled_features", "bevy/debug", "bevy/serialize", "bevy/experimental_bevy_ui_widgets"]
enabled_features = []

[[test]]
name = "end_to_end"
harness = false
